移除预览版功能